# ninety-nine-haskell

./: README.md  ninety-nine-haskell.cabal  ninetynine.cabal  package.yaml  stack.yaml
src/: Lib.hs  Ninetynine.hs
test/: NinetynineSpec.hs  Spec.hs
