name:                ninety-nine-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ninety-nine-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ninetynine
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite spec
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:          -Wall
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , ninety-nine-haskell
                     , hspec >= 2.0 && < 3

source-repository head
  type:     git
  location: https://github.com/githubuser/ninety-nine-haskell
